--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <html>
+    <head>
+<link rel="">
+    </head>
 <body>
 i'm 林程鸿!!!
-<img src="2.jpg">
-
+<script src="jquery.min.js"></script>
+<script src="jssor.slider.min.js"></script>
+<script>
+    jQuery(document).ready(function ($) {
+        var options = { $AutoPlay: 1 };
+        var jssor1_slider = new $JssorSlider$("jssor_1", options);
+    });
+</script>
+<div id="jssor_1" style="position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+    <div data-u="slides" style="position:absolute;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+        <div><img data-u="image" src="1.jpg" /></div>
+        <div><img data-u="image" src="2.jpg" /></div>
+    </div>
+</div>
 
 </body>
 </html>
