--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 <body>
 i'm 林程鸿!!!
-<script src="jquery.min.js"></script>
+<script src="jquery-3.4.1.js"></script>
 <script src="jssor.slider.min.js"></script>
 <script>
     jQuery(document).ready(function ($) {
