--- a/index.html
+++ b/index.html
@@ -11,6 +11,78 @@ i'm 林程鸿!!!
         var options = { $AutoPlay: 1 };
         var jssor1_slider = new $JssorSlider$("jssor_1", options);
     });
+    /*window.clearInterval()
+setInterval(function(){alert("Hello")},3000)
+document.getElementById("header")*/ //选中变色
+
+
+
+ /*function fn(){
+    var max=10;
+    return function bar(x){
+        if(x>max){
+            console.log(x);
+            max=max+x;
+            console.log(max);
+        }
+    };
+ }
+
+var f1=fn(),max=100;
+f1(15);
+f1(10);
+
+
+
+       /*var x=10;
+
+function fn(){
+    console.log(x);
+}
+
+function show(f){
+    var x=20;
+    (function(){
+        f();
+    })();
+}
+show(fn)；
+
+
+
+
+
+   var a=10
+
+function fn(){
+    var b=20;
+    function bar(){
+        console.log(a+b);
+    }
+    return bar;
+    
+}
+var b=200;
+var x=fn();
+x();
+
+
+
+
+
+var reduce=3;
+
+var data=[
+    {name:'计算机安装与维护',credit:2}
+    ,{name:'静态网页制作',credit:2}
+    ,{name:'计算机编程基础',credit:4}
+    ,{name:'大学英语',credit:2}
+    ,{name:'软件技术导论',credit:2}
+];
+console.log(my.max(data));
+console.log(_.max(data,function(it){return it.credit}));
+
+*/
 </script>
 <div id="jssor_1" style="position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
     <div data-u="slides" style="position:absolute;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
