--- a/index.html
+++ b/index.html
@@ -117,3 +117,21 @@ func(44);
 
 </body>
 </html>
+<ul>
+
+</ul>
+<script src="underscore.js"></script>
+var data=[
+{name:'计算机安装与维护',credit:2}
+,{name:'静态网页制作',credit:2}
+,{name:'计算机编程基础',credit:4}
+,{name:'大学英语',credit:2}
+,{name:'软件技术导论',credit:2}
+];
+
+$(function(){
+_.each(data, function(item){
+$("ul").append("<li>"+item.name+"(学分："+item.credit+")"+"</li>");
+});
+
+})
