--- a/text.html
+++ b/text.html
@@ -1,27 +1,30 @@
 <html>
     <body>
-        <ul>
-            
-        </ul>
-        <script src="underscore.js"></script>
+       
         <script src="jquery-3.4.1.js"></script>
 <script>
- 
-var data=[
-    {name:'计算机安装与维护',credit:2}
-    ,{name:'静态网页制作',credit:2}
-    ,{name:'计算机编程基础',credit:4}
-    ,{name:'大学英语',credit:2}
-    ,{name:'软件技术导论',credit:2}
-];
 
-$(function(){
-    _.each(data, function(item){
-        $("ul").append("<li>"+item.name+"(学分："+item.credit+")"+"</li>");
-    });
-  
-})
+ var value=11;
+   var initvalue=22;
 
+function addition(){
+    var value=initvalue;
+    var a=0;
+    return function add(x){
+        value=value+x;
+        a++;
+        if(a==2){
+            console.log(value);
+        }
+
+    };
+
+}
+
+var func=addition();
+
+func(33);
+func(44);
         </script>
 
     </body>
