--- a/index.html
+++ b/index.html
@@ -107,6 +107,30 @@ var func=addition();
 func(33);
 func(44);
 */
+
+
+
+/*<ul>
+
+</ul>
+<script src="underscore.js">
+*/</script>
+<script src="jquery-3.4.1.js"></script>
+<script>
+
+/*var data=[
+    {name:'计算机安装与维护',credit:2}
+    ,{name:'静态网页制作',credit:2}
+    ,{name:'计算机编程基础',credit:4}
+    ,{name:'大学英语',credit:2}
+    ,{name:'软件技术导论',credit:2}
+];
+$(function(){
+_.each(data, function(item){
+        $("ul").append("<li>"+item.name+"(学分："+item.credit+")"+"</li>");
+    });
+})*/
+
 </script>
 <div id="jssor_1" style="position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
     <div data-u="slides" style="position:absolute;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
@@ -117,21 +141,4 @@ func(44);
 
 </body>
 </html>
-<ul>
 
-</ul>
-<script src="underscore.js"></script>
-var data=[
-{name:'计算机安装与维护',credit:2}
-,{name:'静态网页制作',credit:2}
-,{name:'计算机编程基础',credit:4}
-,{name:'大学英语',credit:2}
-,{name:'软件技术导论',credit:2}
-];
-
-$(function(){
-_.each(data, function(item){
-$("ul").append("<li>"+item.name+"(学分："+item.credit+")"+"</li>");
-});
-
-})
