--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@ $(function(){
 _.each(data, function(item){
         $("ul").append("<li>"+item.name+"(学分："+item.credit+")"+"</li>");
     });
-})*/
+})
+ console.log(result)
+        data=result;*/
 
 </script>
 <div id="jssor_1" style="position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
