--- a/text.html
+++ b/text.html
@@ -6,14 +6,14 @@
         <script src="underscore.js"></script>
         <script src="jquery-3.4.1.js"></script>
 <script>
- var data;
+
 $(function(){
     $.get("./data.json",function(result){
-        console.log(result)
-        data=result;
-    
+        _.each(result, function(item){
+        $("ul").append("<li>"+item.name+"(学分："+item.credit+")"+"</li>");
+        
     });
-  
+});
 })
 
         </script>
